--- a/access/css/style.css
+++ b/access/css/style.css
@@ -1,13 +1,51 @@
-*{
+/*=============================================
+=                   Global                   =
+=============================================*/
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body, html{
+
+body,
+html {
     font-family: 'Nunito', sans-serif;
     line-height: 1.15;
     background-color: var(--bgr_color);
 }
-:root{
-    bgr_color: #fff;
+
+:root {
+    --bgr_color: #fff;
+    --primary: #dc4f72;
+    --title-color: #2C3038;
+    --text-color: #5a5a5a;
 }
+
+/*============  End of Global  =============*/
+
+/*=============================================
+=                   General                   =
+=============================================*/
+
+.general__title h3 {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--primary);
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.general__title h2 {
+    font-size: 32px;
+    line-height: 42px;
+    color: var(--title-color);
+}
+
+.general__title p {
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 22.5px;
+}
+
+/*============  End of General  =============*/
