--- a/access/css/style.css
+++ b/access/css/style.css
@@ -1,495 +1,4 @@
-/*=============================================
-=                   Global                   =
-=============================================*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body,
-html {
-    font-family: 'Nunito', sans-serif;
-    line-height: 1.15;
-    background-color: var(--bgr_color);
-}
-
-:root {
-    --bgr_color: #fff;
-    --primary: #dc4f72;
-    --title-color: #2C3038;
-    --text-color: #5a5a5a;
-    --light-bg-color: #F7F9FC;
-    --card-curve: 6px;
-    --border-color: #eee;
-    --border-color-light: ##f8f9fa;
-}
-
-.__title {
-    text-align: center;
-    max-width: 750px;
-    margin: 0 auto;
-}
-
-.__title h3 {
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 700;
-    color: var(--primary);
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
-
-.__title h2 {
-    font-size: 32px;
-    line-height: 42px;
-    color: var(--title-color);
-    font-weight: 700;
-}
-
-.__title p {
-    color: var(--text-color);
-    font-size: 16px;
-    line-height: 22.5px;
-    font-weight: 400;
-}
-
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-/*============  End of Global  =============*/
-/*=============================================
-=                   General                   =
-=============================================*/
-.general {
-    background-color: var(--light-bg-color);
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-}
-
-.general__image {
-    position: sticky;
-    top: 80px;
-}
-
-.general__image img {
-    border-radius: var(--card-curve);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-}
-
-.general__content__col--edit {
-    margin-top: 3rem;
-}
-
-.general__list ul {
-    list-style-type: none;
-}
-
-.general__list input[type="checkbox"] {
-    display: none;
-}
-
-.general__list ul li {
-    margin-bottom: 15px;
-    overflow: hidden;
-}
-
-.general__list ul li label {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 25px 50px 25px 20px;
-    margin-bottom: 0;
-}
-
-.general .card {
-    border-color: var(--border-color);
-    border-radius: var(--card-curve);
-}
-
-.general i {
-    position: absolute;
-    top: 20px;
-    right: 25px;
-}
-
-.general i::after {
-    content: '';
-    display: block;
-    background-color: var(--title-color);
-    width: 3px;
-    height: 9px;
-    transform: rotate(45deg);
-    transition: .3s;
-}
-
-.general i::before {
-    content: '';
-    display: block;
-    background-color: var(--title-color);
-    width: 3px;
-    height: 9px;
-    transform: translate(-5px, 9px) rotate(135deg);
-    transition: .3s;
-}
-
-.general__list__header {
-    font-size: 18px;
-    line-height: 30px;
-    display: block;
-    color: var(--title-color);
-}
-
-.general__list__text {
-    color: var(--text-color);
-    font-size: 16px;
-    line-height: 24.5px;
-    opacity: 0;
-    transform: translateY(50px);
-    max-height: 0;
-    transition: .3s;
-}
-
-.general__list input:checked+label .general__list__text {
-    opacity: 1;
-    transform: translateY(0);
-    max-height: none;
-    margin-top: 14px;
-}
-
-.general__list input:checked+label i::before {
-    transform: translate(0, 9px) rotate(135deg)
-}
-
-.general__list input:checked+label i::after {
-    transform: translate(-4px, 0) rotate(45deg);
-}
-
-/*============  End of General  =============*/
-/*=============================================
-=                   Feature                   =
-=============================================*/
-.featured {
-    padding: 3rem 0;
-    margin-bottom: 1.5rem;
-}
-
-.featured__title {
-    text-align: center;
-}
-
-.featured__title h3 {
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 700;
-    color: var(--primary);
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
-
-.featured__title h2 {
-    font-size: 32px;
-    line-height: 42px;
-    font-weight: 700;
-}
-
-.featured__content {
-    margin-top: 3rem;
-}
-
-.featured__content input[type="radio"] {
-    display: none;
-}
-
-.featured__content label {
-    display: block;
-}
-
-.featured__tabs {
-    border: 1px solid #c1c1c1;
-}
-
-.featured__content .featured__tabs input+label+div {
-    overflow: hidden;
-    max-height: 0px;
-    transition-property: max-height, margin;
-    transition-duration: .5s;
-}
-
-.featured__tabs input:checked+label {
-    border-bottom: 3px solid var(--primary);
-}
-
-.featured__tabs input:checked+label p {
-    color: var(--primary);
-}
-
-.featured__tabs input:checked+label span {
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-bottom: 12px solid #9B9797;
-    border-top: none;
-}
-
-.featured__tabs input:checked+label+div {
-    margin: 20px 0;
-    max-height: 1000px;
-}
-
-.featured__tabs input+label div p {
-    font-weight: 600;
-    font-size: 20px;
-    margin: 0;
-    transition: .2s;
-}
-
-.featured__tabs input+label div span {
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 12px solid #c1c1c1;
-}
-
-.featured .featured__tab-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.featured__content .featured__tabs input+label+div h2 {
-    font-size: 24px;
-    line-height: 30px;
-    margin-bottom: 14px;
-    font-weight: 700;
-    color: var(--title-color)
-}
-
-.featured__content .featured__tabs input+label+div p {
-    color: var(--text-color);
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 24.5px;
-}
-
-.featured__content .featured__tabs div .theme-button {
-    color: #dc4f72;
-    border-color: #dc4f72;
-    font-weight: 700;
-    font-size: 14px;
-    text-transform: uppercase;
-    line-height: 44px;
-    padding: 0px 20px;
-    margin-top: 1rem;
-}
-
-.featured__content .featured__tabs div .btn-outline-primary:not(:disabled):not(.disabled).active,
-.btn-outline-primary:not(:disabled):not(.disabled):active,
-.show>.btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #dc4f72;
-    border-color: #dc4f72;
-}
-
-.featured__content .featured__tabs div .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
-.btn-outline-primary:not(:disabled):not(.disabled):active:focus,
-.show>.btn-outline-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.5);
-    color: white;
-}
-
-.featured__content .featured__tabs div .btn-outline-primary:hover {
-    background-color: #dc4f72;
-    color: white;
-}
-
-.featured__content .featured__tabs div .btn-outline-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(220, 79, 114, 0.5);
-    color: white;
-}
-
-.featured__content .featured__tabs div img {
-    border-radius: var(--card-curve);
-    margin-top: 3rem;
-}
-
-.featured .featured__tabs label {
-    margin-bottom: 0;
-    padding-top: 10px;
-    padding-right: 15px;
-    padding-left: 15px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgb(193, 193, 193);
-}
-
-.featured .featured__tabs>div:nth-of-type(2) img {
-    margin-top: 0;
-}
-
-/*============  End of Feature  =============*/
-/*=============================================
-=                   Feedback                   =
-=============================================*/
-.feedback {
-    background: linear-gradient(to right, var(--bgr_color), rgba(255, 255, 255, 0.77)), url('../image/b2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-}
-
-.feedback__content {
-    padding-bottom: 3rem;
-}
-
-.feedback .feedback__carousel-item__content__img {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-    overflow: hidden;
-    background: #f3f6f9;
-    border-radius: 50%;
-    border: 3px solid var(--primary);
-}
-
-/*============  End of Feedback  =============*/
-/*=============================================
-=                   Responsive                   =
-=============================================*/
-@media (min-width: 576px) {
-    .container {
-        max-width: 100%;
-        padding-right: 30px;
-        padding-left: 30px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-}
-
-@media (min-width: 576px) and (max-width: 667px) {
-    .__title h2 {
-        font-size: 32px;
-        line-height: 42px;
-    }
-}
-
-@media (min-width: 668px) and (max-width: 800px) {
-    .__title h2 {
-        font-size: 40px;
-        line-height: 50px;
-    }
-}
-
-@media (min-width: 768px) {
-
-    /*=============================================
-    =                   General                   =
-    =============================================*/
-    .general__content__col--edit:last-child {
-        padding-left: 3rem;
-    }
-
-    /*============  End of General  =============*/
-    /*=============================================
-    =                   Featured                   =
-    =============================================*/
-    .featured .featured__tabs {
-        position: relative;
-        border: none;
-    }
-
-    .featured .featured__tabs label {
-        width: 33.33333333333%;
-        position: absolute;
-        border-bottom: 3px solid rgb(193, 193, 193);
-    }
-
-    .featured .featured__tabs>label:nth-of-type(2) {
-        top: 0;
-        left: 33.33333333333%;
-    }
-
-    .featured .featured__tabs>label:nth-of-type(3) {
-        top: 0;
-        right: 0;
-    }
-
-    .featured .featured__tabs label span {
-        display: none;
-    }
-
-    .featured .featured__tabs label .featured__tab-header>p {
-        font-weight: 700;
-        font-size: 22px;
-    }
-
-    .featured .featured__tabs label .featured__tab-header {
-        justify-content: center;
-    }
-
-    .featured__tab-item--edit {
-        margin-top: 88px;
-    }
-
-    .featured__content .featured__tabs input+label+div {
-        transition: none;
-    }
-
-    .featured__content .featured__tabs input+label+div img {
-        margin-top: 0;
-    }
-
-    /*============  End of Featured  =============*/
-}
-
-@media (min-width: 801px) {
-    .__title h2 {
-        font-size: 46px;
-    }
-}
-
-@media (min-width: 992px) {
-
-    /*=============================================
-    =                   Feature                   =
-    =============================================*/
-    .featured__content {
-        max-width: 83.33333333333%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    /*============  End of Feature  =============*/
-}
-
-@media (min-width: 1200px) {}
-
-@media (min-width: 1280px) {
-    .container {
-        max-width: 1200px;
-    }
-
-    /*=============================================
-    =                   Feature                   =
-    =============================================*/
-    .featured__content {
-        max-width: 83.33333333333%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    /*============  End of Feature  =============*/
-}
-
-@media (min-width: 1400px) {}
-
-/*============  End of Responsive  =============*/
+@import url(./nhutGlobal.css);
+@import url(./general.css);
+@import url(./feature.css);
+@import url(./feedback.css);
