--- a/access/css/feedback.css
+++ b/access/css/feedback.css
@@ -1,6 +1,6 @@
 
 .feedback {
-    background: linear-gradient(to right, var(--bgr_color), rgba(255, 255, 255, 0.77)), url('../image/b2.jpg');
+    background: linear-gradient(to right, var(--bgr-color), rgba(255, 255, 255, 0.77)), url('../image/b2.jpg');
     background-size: cover;
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: center;
