--- a/access/css/feedback.css
+++ b/access/css/feedback.css
@@ -1,4 +1,3 @@
-
 .feedback {
     background: linear-gradient(to right, var(--bgr-color), rgba(255, 255, 255, 0.77)), url('../image/b2.jpg');
     background-size: cover;
@@ -13,15 +12,89 @@
     padding-bottom: 3rem;
 }
 
+.carouselFeedback--edit {
+    margin-top: 3rem;
+}
+
+.feedback .carousel-indicators {
+    bottom: -72px;
+}
+
+.feedback .carousel-inner .carousel-item {
+    transition: transform .2s ease-in-out;
+}
+
+.feedback .carousel-indicators .active {
+    background-color: var(--primary);
+}
+
+.feedback .carousel-indicators li {
+    width: 40px;
+    height: 5px;
+    display: block;
+    margin: 5px 5px;
+    transition: opacity .2s ease;
+}
+
+.feedback .feedback__carousel-item__content {
+    background: var(--bgr-color);
+    border-radius: var(--card-curve);
+    max-width: 95%;
+    margin: 0 auto;
+    display: grid;
+    position: relative;
+}
+
+.feedback .feedback__carousel-item__content i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: var(--title-color);
+    opacity: 0.2;
+    font-size: 30px;
+}
+
 .feedback .feedback__carousel-item__content__img {
     margin-left: auto;
     margin-right: auto;
     width: 100px;
     height: 100px;
-    display: inline-block;
+    display: block;
     overflow: hidden;
     background: #f3f6f9;
     border-radius: 50%;
     border: 3px solid var(--primary);
 }
 
+.feedback .feedback__carousel-item__content__text p {
+    font-size: 18px;
+    line-height: 26px;
+    color: var(--title-color);
+}
+
+.feedback .feedback__carousel-item__content__text h4 {
+    font-size: 18px;
+    color: var(--primary);
+    font-weight: 400;
+    margin-top: 1.5rem;
+}
+
+.feedback .feedback__carousel-item__content__text small {
+    font-size: 13px;
+    color: var(--text-color);
+    line-height: 26px;
+}
+
+@media (min-width: 100px) and (max-width: 480px) {
+    .feedback .feedback__carousel-item__content {
+        gap: 10px;
+        padding: 2rem 1rem;
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (min-width: 100px) and (max-width: 667px) {
+    .feedback .feedback__carousel-item__content__text {
+        text-align: center;
+    }
+}
